force-app/main/default/objects/User/fields/Agr_AdvisorBackup__c.field-meta.xml
<CustomField>
    <fullName>Agr_AdvisorBackup__c</fullName>
    <label>Assessor backup</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.UserRoleId</field>
            <operation>equals</operation>
            <value>Assessor Prospect Private</value>
        </filterItems>
        <infoMessage>Selecione o assessor backup</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <relationshipName>AdvisorBackup</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>