force-app/main/default/objects/User/fields/Agr_EmployeeArea__c.field-meta.xml
<CustomField>
    <fullName>Agr_EmployeeArea__c</fullName>
    <label>Área de atuação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAI - Negócios</fullName>
            </value>
            <value>
                <fullName>Analytcs &amp; BI</fullName>
            </value>
            <value>
                <fullName>Ativação</fullName>
            </value>
            <value>
                <fullName>Back-Office</fullName>
            </value>
            <value>
                <fullName>BM&amp;F - Trading</fullName>
            </value>
            <value>
                <fullName>Cadastro</fullName>
            </value>
            <value>
                <fullName>Clubes - Negócios</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Derivativos - Trading</fullName>
            </value>
            <value>
                <fullName>Educacional</fullName>
            </value>
            <value>
                <fullName>Empresas - Negoócios</fullName>
            </value>
            <value>
                <fullName>Estratégia de Mercado</fullName>
            </value>
            <value>
                <fullName>Execução - Trading</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Fundos e Carteiras</fullName>
            </value>
            <value>
                <fullName>Gestão de Acessos</fullName>
            </value>
            <value>
                <fullName>Gestão de Resultados</fullName>
            </value>
            <value>
                <fullName>Gestoras - Negócios</fullName>
            </value>
            <value>
                <fullName>Global - Prospect</fullName>
            </value>
            <value>
                <fullName>Global - Sales</fullName>
            </value>
            <value>
                <fullName>Global - Trading</fullName>
            </value>
            <value>
                <fullName>Investimentos</fullName>
            </value>
            <value>
                <fullName>Mesa Termo &amp; BTC - Trading</fullName>
            </value>
            <value>
                <fullName>Private - Prospect</fullName>
            </value>
            <value>
                <fullName>Private - Sales</fullName>
            </value>
            <value>
                <fullName>Private - Trading</fullName>
            </value>
            <value>
                <fullName>Produtos Digitais</fullName>
            </value>
            <value>
                <fullName>Produtos Financeiros</fullName>
            </value>
            <value>
                <fullName>Qualidade &amp; Soluções</fullName>
            </value>
            <value>
                <fullName>Receptivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>